docs(landing): fix transition value

--- a/documentation/src/components/hero/styles.module.css
+++ b/documentation/src/components/hero/styles.module.css
@@ -93,7 +93,7 @@
     font-size: 24px;
     padding: 2px;
     cursor: pointer;
-    transition: all 0.s;
+    transition: all 0.5s;
 }
 
 .icon:hover {
