--- a/examples/store/src/components/ui/Modal/Modal.module.css
+++ b/examples/store/src/components/ui/Modal/Modal.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply fixed bg-black bg-opacity-40 grid overflow-y-scroll flex items-center inset-0 z-50 justify-center;
+  @apply fixed bg-black bg-opacity-40 grid overflow-y-scroll items-center inset-0 z-50 justify-center;
   backdrop-filter: blur(0.8px);
   -webkit-backdrop-filter: blur(0.8px);
 }
