fix(auth-model): removed rounded borders for auth model
Co-authored-by: Ömer Faruk APLAK <omer@refine.dev>

--- a/examples/store/src/components/ui/Modal/Modal.module.css
+++ b/examples/store/src/components/ui/Modal/Modal.module.css
@@ -5,7 +5,7 @@
 }
 
 .modal {
-  @apply rounded bg-primary border border-accent-2 relative;
+  @apply bg-primary border border-accent-2 relative;
 }
 
 .modal:focus {
