made responsive padding for model
Co-authored-by: Salih Özdemir <salihozdemir94@gmail.com>

--- a/examples/store/src/components/ui/Modal/Modal.module.css
+++ b/examples/store/src/components/ui/Modal/Modal.module.css
@@ -5,7 +5,7 @@
 }
 
 .modal {
-  @apply bg-primary border border-accent-2 relative;
+  @apply bg-primary border border-accent-2 relative p-2 md:p-12;
 }
 
 .modal:focus {
