fix(auth-model): changes made for model to be responsive in store (#2801)
* fix(auth-model): changes made for responsive model

* flex removed class

flex class removed as grid is already present and they would conflict

* fix(auth-model): removed rounded borders for auth model

Co-authored-by: Ömer Faruk APLAK <omer@refine.dev>

* made responsive padding for model

Co-authored-by: Salih Özdemir <salihozdemir94@gmail.com>

* restored margin to it's previous size

Co-authored-by: Salih Özdemir <salihozdemir94@gmail.com>

Co-authored-by: Ömer Faruk APLAK <omer@refine.dev>
Co-authored-by: Salih Özdemir <salihozdemir94@gmail.com>

--- a/examples/store/src/components/ui/Modal/Modal.module.css
+++ b/examples/store/src/components/ui/Modal/Modal.module.css
@@ -1,11 +1,11 @@
 .root {
-  @apply fixed bg-black bg-opacity-40 flex items-center inset-0 z-50 justify-center;
+  @apply fixed bg-black bg-opacity-40 grid overflow-y-scroll items-center inset-0 z-50 justify-center;
   backdrop-filter: blur(0.8px);
   -webkit-backdrop-filter: blur(0.8px);
 }
 
 .modal {
-  @apply bg-primary p-12 border border-accent-2 relative;
+  @apply bg-primary border border-accent-2 relative p-2 md:p-12;
 }
 
 .modal:focus {
