--- a/examples/store/src/components/common/UserNav/UserNav.module.css
+++ b/examples/store/src/components/common/UserNav/UserNav.module.css
@@ -8,11 +8,11 @@
 
 .item {
   @apply ml-6 cursor-pointer relative transition ease-in-out
-  duration-100 flex items-center outline-none text-primary;
+  duration-100 flex items-center outline-none text-primary !important;
 }
 
 .item:hover {
-  @apply text-accent-6 transition scale-110 duration-100;
+  @apply text-accent-6 transition scale-110 duration-100 !important;
 }
 
 .item:first-child {
@@ -21,11 +21,11 @@
 
 .item:focus,
 .item:active {
-  @apply outline-none;
+  @apply outline-none !important;
 }
 
 .bagCount {
-  @apply border border-accent-1 bg-secondary text-secondary absolute rounded-full right-3 top-3 flex items-center justify-center font-bold text-xs;
+  @apply border border-accent-1 bg-secondary text-secondary absolute rounded-full right-3 top-3 flex items-center justify-center font-bold text-xs !important;
   padding-left: 2.5px;
   padding-right: 2.5px;
   min-width: 1.25rem;
@@ -37,16 +37,16 @@
 }
 
 .mobileMenu {
-  @apply flex lg:hidden ml-6 text-white;
+  @apply flex lg:hidden ml-6 text-white !important;
 }
 
 .avatarButton:focus,
 .mobileMenu:focus {
-  @apply outline-none;
+  @apply outline-none !important;
 }
 
 .dropdownDesktop {
-  @apply hidden -z-10;
+  @apply hidden -z-10 !important;
 }
 
 @media screen(lg) {
