--- a/documentation/src/components/tutorial-card/styles.module.css
+++ b/documentation/src/components/tutorial-card/styles.module.css
@@ -3,24 +3,28 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 24px;
+    padding: 32px 24px 24px 24px;
     height: 100%;
     border-radius: 10px;
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
     transition: all 0.2s;
     text-align: center;
+    background-color: #81818f;
 }
 
 .card:hover {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
     transform: scale(1.01);
-    background-color: rgb(248, 249, 250);
+    background-color: #1890FF;
 }
 
 .card img {
-    height: 120px;
+    height: 100px;
 }
 
 .card span {
-    margin-top: 16px;
+    margin-top: 8px;
+    color: white;
+    font-weight: 700;
+    font-family: "Montserrat";
 }
