--- a/documentation/src/components/tutorial-card/styles.module.css
+++ b/documentation/src/components/tutorial-card/styles.module.css
@@ -5,22 +5,26 @@
     align-items: center;
     padding: 24px;
     height: 100%;
-    border-radius: 10px;
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 16px;
+    border: 1px solid var(--ifm-color-emphasis-200);
     transition: all 0.2s;
     text-align: center;
+    height: 160px;
+    background: var(--tutorial-card-bg);
 }
 
 .card:hover {
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
-    transform: scale(1.01);
-    background-color: rgb(248, 249, 250);
+    background: var(--tutorial-card-bg-hover);
+    box-shadow: 4px 8px 16px rgba(42, 42, 66, 0.25);
 }
 
-.card img {
-    height: 120px;
+.link {
+    text-decoration: none !important;
 }
 
 .card span {
-    margin-top: 16px;
+    margin-top: 8px;
+    color: var(--ifm-font-color-base);
+    font-weight: 700;
+    font-family: "Montserrat";
 }
