--- a/examples/store/src/components/product/ProductSliderControl/ProductSliderControl.module.css
+++ b/examples/store/src/components/product/ProductSliderControl/ProductSliderControl.module.css
@@ -1,12 +1,11 @@
 .control {
-    @apply bg-blue border-accent-0 text-accent-0 absolute bottom-10 right-10
-  z-30 flex select-none flex-row border shadow-xl;
-    height: 48px;
+    @apply bg-blue border-accent-0 text-accent-0 h-10 absolute bottom-10 right-10
+  z-30 flex select-none flex-row border shadow-xl opacity-60;
 }
 
 .leftControl,
 .rightControl {
-    @apply cursor-pointer px-9;
+    @apply cursor-pointer px-4 md:px-9;
     transition: background-color 0.2s ease;
 }
 
