feat: add path option and copy compiled files

--- a/packages/cli/templates/resource/create.tsx.hbs
+++ b/packages/cli/templates/resource/create.tsx.hbs
@@ -13,7 +13,7 @@ import MDEditor from "@uiw/react-md-editor";
 
 import { IPost, ICategory } from "interfaces";
 
-export const {{resourceName}}Create: React.FC<IResourceComponentsProps> = () => {
+export const {{capitalize resourceName}}Create: React.FC<IResourceComponentsProps> = () => {
     const { formProps, saveButtonProps } = useForm<IPost>({
         // warnWhenUnsavedChanges: true,
     });
