--- a/packages/cli/templates/resource/show.tsx.hbs
+++ b/packages/cli/templates/resource/show.tsx.hbs
@@ -5,7 +5,7 @@ import { IPost, ICategory } from "interfaces";
 
 const { Title, Text } = Typography;
 
-export const {{resourceName}}Show: React.FC<IResourceComponentsProps> = () => {
+export const {{capitalize resourceName}}Show: React.FC<IResourceComponentsProps> = () => {
     const { queryResult } = useShow<IPost>();
     const { data, isLoading } = queryResult;
     const record = data?.data;
