--- a/packages/cli/templates/resource/list.tsx.hbs
+++ b/packages/cli/templates/resource/list.tsx.hbs
@@ -7,7 +7,7 @@ import {
 
 import { IPost, ICategory } from "interfaces";
 
-export const {{resourceName}}List: React.FC<IResourceComponentsProps> = () => {
+export const {{capitalize resourceName}}List: React.FC<IResourceComponentsProps> = () => {
     const { tableProps, filters } = useTable<IPost>({
         syncWithLocation: true,
     });
