feat: add uiFramework utils and pass compile method

--- a/packages/cli/templates/resource/react-scripts/list.tsx.hbs
+++ b/packages/cli/templates/resource/react-scripts/list.tsx.hbs
@@ -3,7 +3,7 @@ import {
     List,
     Table,
     useTable,
-} from "@pankod/refine-antd";
+} from "@pankod/refine-{{uiFramework}}";
 
 import { IPost, ICategory } from "interfaces";
 
