refactor: resourceName to resource on resource templates

--- a/packages/cli/templates/resource/nextjs/edit.tsx.hbs
+++ b/packages/cli/templates/resource/nextjs/edit.tsx.hbs
@@ -13,7 +13,7 @@ import MDEditor from "@uiw/react-md-editor";
 
 import { IPost, ICategory } from "interfaces";
 
-export const {{capitalize resourceName}}Edit: React.FC<IResourceComponentsProps> = () => {
+export const {{capitalize resource}}Edit: React.FC<IResourceComponentsProps> = () => {
     const { formProps, saveButtonProps, queryResult } = useForm<IPost>({
         warnWhenUnsavedChanges: true,
     });
