--- a/packages/cli/templates/resource/react-scripts/show.tsx.hbs
+++ b/packages/cli/templates/resource/react-scripts/show.tsx.hbs
@@ -1,39 +1,6 @@
-import { useShow, IResourceComponentsProps, useOne } from "@pankod/refine-core";
-import { Show, Typography, MarkdownField } from "@pankod/refine-antd";
-
-import { IPost, ICategory } from "interfaces";
-
-const { Title, Text } = Typography;
+import { IResourceComponentsProps } from "@pankod/refine-core";
+import {  } from "@pankod/refine-{{uiFramework}}";
 
 export const {{capitalize resource}}Show: React.FC<IResourceComponentsProps> = () => {
-    const { queryResult } = useShow<IPost>();
-    const { data, isLoading } = queryResult;
-    const record = data?.data;
-
-    const { data: categoryData, isLoading: categoryIsLoading } =
-        useOne<ICategory>({
-            resource: "categories",
-            id: record?.category.id || "",
-            queryOptions: {
-                enabled: !!record,
-            },
-        });
-
-    return (
-        <Show isLoading={isLoading}>
-            <Title level={5}>Id</Title>
-            <Text>{record?.id}</Text>
-
-            <Title level={5}>Title</Title>
-            <Text>{record?.title}</Text>
-
-            <Title level={5}>Category</Title>
-            <Text>
-                {categoryIsLoading ? "Loading..." : categoryData?.data.title}
-            </Text>
-
-            <Title level={5}>Content</Title>
-            <MarkdownField value={record?.content} />
-        </Show>
-    );
+    return <span>Show Page</span>;
 };
