--- a/packages/cli/templates/resource/nextjs/list.tsx.hbs
+++ b/packages/cli/templates/resource/nextjs/list.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps, GetListResponse, useMany } from "@pankod/refine-core";
-import { } from "@pankod/refine-{{uiFramework}}";
+import {} from "@pankod/refine-{{uiFramework}}";
 
-export const PostList: React.FC<IResourceComponentsProps<GetListResponse<any>>> = ({ initialData }) => {
-    return <span>List Page</span>
+export const {{capitalize resource}}List: React.FC<IResourceComponentsProps<GetListResponse<any>>> = ({ initialData }) => {
+    return <span>List Page</span>;
 };
