--- a/packages/cli/templates/resource/react-scripts/edit.tsx.hbs
+++ b/packages/cli/templates/resource/react-scripts/edit.tsx.hbs
@@ -1,7 +1,7 @@
 import React from "react";
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { } from "@pankod/refine-{{uiFramework}}";
+import {} from "@pankod/refine-{{uiFramework}}";
 
 export const {{capitalize resource}}Edit: React.FC<IResourceComponentsProps> = () => {
-    return <span>Edit Page</span>
+    return <span>Edit Page</span>;
 };
