--- a/packages/cli/templates/resource/react-scripts/index.ts.hbs
+++ b/packages/cli/templates/resource/react-scripts/index.ts.hbs
@@ -3,10 +3,8 @@ export * from "./list";
 export * from './create';
 {{/ifIn}}
 {{#ifIn actions "edit"}}
-export * from './edit';
+export * from "./edit";
 {{/ifIn}}
 {{#ifIn actions "show"}}
-export * from './show';
+export * from "./show";
 {{/ifIn}}
-
-
