--- a/packages/cli/templates/resource/remix/list.tsx.hbs
+++ b/packages/cli/templates/resource/remix/list.tsx.hbs
@@ -1,7 +1,7 @@
 import { useLoaderData } from "@remix-run/react";
 import { IResourceComponentsProps, useMany } from "@pankod/refine-core";
-import { } from "@pankod/refine-{{uiFramework}}";
+import {} from "@pankod/refine-{{uiFramework}}";
 
 export const {{capitalize resource}}List: React.FC<IResourceComponentsProps> = () => {
-    return <span>List Page</span>
+    return <span>List Page</span>;
 };
