--- a/packages/cli/templates/resource/nextjs/index.ts.hbs
+++ b/packages/cli/templates/resource/nextjs/index.ts.hbs
@@ -1,12 +1,10 @@
 export * from "./list";
 {{#ifIn actions "create"}}
-export * from './create';
+export * from "./create";
 {{/ifIn}}
 {{#ifIn actions "edit"}}
-export * from './edit';
+export * from "./edit";
 {{/ifIn}}
 {{#ifIn actions "show"}}
-export * from './show';
+export * from "./show";
 {{/ifIn}}
-
-
