--- a/packages/cli/templates/resource/react-scripts/create.tsx.hbs
+++ b/packages/cli/templates/resource/react-scripts/create.tsx.hbs
@@ -1,8 +1,7 @@
 import React from "react";
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { } from "@pankod/refine-{{uiFramework}}";
+import {} from "@pankod/refine-{{uiFramework}}";
 
 export const {{capitalize resource}}Create: React.FC<IResourceComponentsProps> = () => {
-    
-    return <span>List Page</span>
+    return <span>List Page</span>;
 };
