--- a/packages/cli/templates/resource/remix/create.tsx.hbs
+++ b/packages/cli/templates/resource/remix/create.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { } from "@pankod/refine-{{uiFramework}}";
+import {} from "@pankod/refine-{{uiFramework}}";
 
 export const {{capitalize resource}}Create: React.FC<IResourceComponentsProps> = () => {
-    return <span>Create Page</span>
+    return <span>Create Page</span>;
 };
