--- a/packages/cli/templates/resource/nextjs/create.tsx.hbs
+++ b/packages/cli/templates/resource/nextjs/create.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import {} from "@pankod/refine-{{uiFramework}}";
+import { AntdCreateInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}Create: React.FC<IResourceComponentsProps> = () => {
-    return <span>Create Page</span>;
+    return <AntdCreateInferencer />;
 };
