--- a/packages/cli/templates/resource/nextjs/edit.tsx.hbs
+++ b/packages/cli/templates/resource/nextjs/edit.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import {} from "@pankod/refine-{{uiFramework}}";
+import { AntdEditInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}Edit: React.FC<IResourceComponentsProps> = () => {
-    return <span>Edit Page</span>;
+    return <AntdEditInferencer />
 };
