--- a/packages/cli/templates/resource/react-scripts/list.tsx.hbs
+++ b/packages/cli/templates/resource/react-scripts/list.tsx.hbs
@@ -1,6 +1,7 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import {} from "@pankod/refine-{{uiFramework}}";
+import { AntdListInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+
 
 export const {{capitalize resource}}List: React.FC<IResourceComponentsProps> = () => {
-    return <span>List Page</span>;
+    return <AntdListInferencer />;
 };
