--- a/packages/cli/templates/resource/nextjs/edit.tsx.hbs
+++ b/packages/cli/templates/resource/nextjs/edit.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { AntdEditInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{capitalize uiFramework}}EditInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}Edit: React.FC<IResourceComponentsProps> = () => {
-    return <AntdEditInferencer />
+    return <{{capitalize uiFramework}}EditInferencer />
 };
