--- a/packages/cli/templates/resource/nextjs/list.tsx.hbs
+++ b/packages/cli/templates/resource/nextjs/list.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps, GetListResponse, useMany } from "@pankod/refine-core";
-import { AntdListInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{capitalize uiFramework}}ListInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}List: React.FC<IResourceComponentsProps<GetListResponse<any>>> = ({ initialData }) => {
-    return <AntdListInferencer />;
+    return <{{capitalize uiFramework}}ListInferencer />;
 };
