--- a/packages/cli/templates/resource/react-scripts/create.tsx.hbs
+++ b/packages/cli/templates/resource/react-scripts/create.tsx.hbs
@@ -1,8 +1,8 @@
 import React from "react";
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { AntdCreateInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{capitalize uiFramework}}CreateInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 
 export const {{capitalize resource}}Create: React.FC<IResourceComponentsProps> = () => {
-    return <AntdCreateInferencer />;
+    return <{{capitalize uiFramework}}CreateInferencer />;
 };
