--- a/packages/cli/templates/resource/react-scripts/edit.tsx.hbs
+++ b/packages/cli/templates/resource/react-scripts/edit.tsx.hbs
@@ -1,8 +1,8 @@
 import React from "react";
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { AntdEditInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{capitalize uiFramework}}EditInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 
 export const {{capitalize resource}}Edit: React.FC<IResourceComponentsProps> = () => {
-    return <AntdEditInferencer />;
+    return <{{capitalize uiFramework}}EditInferencer />;
 };
