--- a/packages/cli/templates/resource/list.tsx.hbs
+++ b/packages/cli/templates/resource/list.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps, GetListResponse, useMany } from "@pankod/refine-core";
 import { {{capitalize uiFramework}}ListInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
-export const {{capitalize resource}}List: React.FC<IResourceComponentsProps<GetListResponse<any>>> = ({ initialData }) => {
+export const {{capitalize resource}}List: React.FC<IResourceComponentsProps<GetListResponse<unkown>>> = ({ initialData }) => {
     return <{{capitalize uiFramework}}ListInferencer />;
 };
