refactor: use new components for cli templates

--- a/packages/cli/templates/resource/edit.tsx.hbs
+++ b/packages/cli/templates/resource/edit.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { {{formatInferencerComponent uiFramework}}EditInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{formatInferencerComponent uiFramework}}Inferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}Edit: React.FC<IResourceComponentsProps> = () => {
-    return <{{formatInferencerComponent uiFramework}}EditInferencer />;
+    return <{{formatInferencerComponent uiFramework}}Inferencer />;
 };
