--- a/packages/cli/templates/resource/list.tsx.hbs
+++ b/packages/cli/templates/resource/list.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps, GetListResponse } from "@pankod/refine-core";
-import { {{formatInferencerComponent uiFramework}}ListInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{formatInferencerComponent uiFramework}}Inferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}List: React.FC<IResourceComponentsProps<GetListResponse<{}>>> = () => {
-    return <{{formatInferencerComponent uiFramework}}ListInferencer />;
+    return <{{formatInferencerComponent uiFramework}}Inferencer />;
 };
