--- a/packages/cli/templates/resource/create.tsx.hbs
+++ b/packages/cli/templates/resource/create.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { {{formatInferencerComponent uiFramework}}CreateInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{formatInferencerComponent uiFramework}}Inferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}Create: React.FC<IResourceComponentsProps> = () => {
-    return <{{formatInferencerComponent uiFramework}}CreateInferencer />;
+    return <{{formatInferencerComponent uiFramework}}Inferencer />;
 };
