--- a/packages/cli/templates/resource/show.tsx.hbs
+++ b/packages/cli/templates/resource/show.tsx.hbs
@@ -1,6 +1,6 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
-import { {{formatInferencerComponent uiFramework}}ShowInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{formatInferencerComponent uiFramework}}Inferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 
 export const {{capitalize resource}}Show: React.FC<IResourceComponentsProps> = () => {
-    return <{{formatInferencerComponent uiFramework}}ShowInferencer />;
+    return <{{formatInferencerComponent uiFramework}}Inferencer />;
 };
