--- a/packages/cli/templates/resource/edit.tsx.hbs
+++ b/packages/cli/templates/resource/edit.tsx.hbs
@@ -1,11 +1,11 @@
 import { IResourceComponentsProps } from "@pankod/refine-core";
 {{#if uiFramework}}
-import { {{formatInferencerComponent uiFramework}}EditInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{formatInferencerComponent uiFramework}}Inferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 {{/if}}
 
 export const {{capitalize resource}}Edit: React.FC<IResourceComponentsProps> = () => {
     {{#if uiFramework}}
-    return <{{formatInferencerComponent uiFramework}}EditInferencer />;
+    return <{{formatInferencerComponent uiFramework}}Inferencer />;
     {{else}}
     return <span>EditPage</span>;
     {{/if}}
