--- a/packages/cli/templates/resource/list.tsx.hbs
+++ b/packages/cli/templates/resource/list.tsx.hbs
@@ -1,11 +1,11 @@
 import { IResourceComponentsProps, GetListResponse } from "@pankod/refine-core";
 {{#if uiFramework}}
-import { {{formatInferencerComponent uiFramework}}ListInferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
+import { {{formatInferencerComponent uiFramework}}Inferencer } from "@pankod/refine-inferencer/{{uiFramework}}";
 {{/if}}
 
 export const {{capitalize resource}}List: React.FC<IResourceComponentsProps<GetListResponse<{}>>> = () => {
     {{#if uiFramework}}
-    return <{{formatInferencerComponent uiFramework}}ListInferencer />;
+    return <{{formatInferencerComponent uiFramework}}Inferencer />;
     {{else}}
     return <span>ListPage</span>;
     {{/if}}
