--- a/examples/pixels/src/styles/antd.less
+++ b/examples/pixels/src/styles/antd.less
@@ -9,16 +9,16 @@
 
 // font
 @font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 // base variables
 @border-radius-base: 6px;
 
 // colors
-@primary-color: #3ecf8e;
+@primary-color: #1890ff;
 @error-color: #fa541c;
-@text-color: #626262;
+@text-color: #80808a;
 
 // sider
 @layout-sider-background: #242436;
@@ -36,62 +36,143 @@
 .ant-menu-inline,
 .ant-menu-vertical,
 .ant-menu-vertical-left {
-  border-right: 0px;
+    border-right: 0px;
 }
 
 .ant-form-item-label > label {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .ant-page-header {
-  border-radius: @border-radius-base;
+    border-radius: @border-radius-base;
 }
+
 .ant-menu-submenu-popup > .ant-menu {
-  background-color: #2a132e;
+    background-color: #2a132e;
 }
+
 .ant-menu-tree-arrow {
-  position: absolute;
-  top: 50%;
-  right: 16px;
-  width: 10px;
-  color: #fff;
-  transform: translateY(-50%);
-  transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    position: absolute;
+    top: 50%;
+    right: 16px;
+    width: 10px;
+    color: #fff;
+    transform: translateY(-50%);
+    transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
+
 .ant-menu-tree-arrow::before,
 .ant-menu-tree-arrow::after {
-  position: absolute;
-  width: 6px;
-  height: 1.5px;
-  background-color: currentcolor;
-  border-radius: 2px;
-  transition: background 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
-    transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
-    top 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
-    color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-  content: "";
+    position: absolute;
+    width: 6px;
+    height: 1.5px;
+    background-color: currentcolor;
+    border-radius: 2px;
+    transition: background 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
+        transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
+        top 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
+        color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    content: "";
 }
+
 .ant-menu-tree-arrow::before {
-  transform: rotate(45deg) translateY(-2.5px);
+    transform: rotate(45deg) translateY(-2.5px);
 }
+
 .ant-menu-tree-arrow::after {
-  transform: rotate(-45deg) translateY(2.5px);
+    transform: rotate(-45deg) translateY(2.5px);
 }
 
-.page-shadow {
-  padding: 36px;
-  background-color: #fff;
-  border: 1px solid #f5f5f5;
-  border-radius: 16px;
-  box-shadow: 4px 8px 16px rgba(42, 42, 66, 0.25);
+.container {
+    margin: auto;
+    max-width: 1120px;
+    width: 100%;
+    padding: 0px 16px;
 }
 
-.canvas-tile {
-  padding: 6px;
-  border: 1px solid #f5f5f5;
-  border-radius: 4px;
+.paper {
+    background-color: #fff;
+    box-shadow: 4px 8px 16px rgba(42, 42, 66, 0.25);
+    border-radius: 16px;
+    padding: 24px;
 }
 
-.canvas-tile:hover {
-  box-shadow: 4px 8px 16px 2px rgba(42, 42, 66, 0.25);
+.paper-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+
+.canvas-list {
+    .ant-list-items {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 248px);
+        gap: 16px;
+        align-items: flex-start;
+        justify-content: center;
+    }
+}
+
+.canvas-item {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #d8d8db;
+    border-radius: 8px;
+    padding: 14px;
+    height: 100%;
+}
+
+.canvas-item:hover {
+    border-color: @primary-color;
+    border-style: dashed;
+    transition: border-color 0.3s;
+
+    .canvas-name-text {
+        color: @primary-color;
+        transition: color 0.3s;
+    }
+}
+
+.canvas-name-text {
+    margin-top: 16px;
+    margin-bottom: 4px;
+    font-weight: 600;
+}
+
+.layout-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px 0px;
+}
+
+.dot-icon {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #96969e;
+    margin-right: 6px;
+}
+
+.nav-button {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    color: #96969e;
+    transition: all 0.3s;
+
+    &:hover {
+        .dot-icon {
+            background-color: @primary-color;
+        }
+    }
+
+    &.active {
+        color: #242436;
+
+        .dot-icon {
+            background-color: @primary-color;
+        }
+    }
 }
