fix: update primary color

--- a/examples/pixels/src/styles/antd.less
+++ b/examples/pixels/src/styles/antd.less
@@ -16,7 +16,7 @@
 @border-radius-base: 6px;
 
 // colors
-@primary-color: #1890ff;
+@primary-color: #3ecf8e;
 @error-color: #fa541c;
 @text-color: #80808a;
 
