fix: decrease col size 4 to 3

--- a/examples/pixels/src/styles/antd.less
+++ b/examples/pixels/src/styles/antd.less
@@ -85,7 +85,7 @@
 
 .container {
     margin: auto;
-    max-width: 1120px;
+    max-width: 940px;
     width: 100%;
     padding: 0px 16px;
 }
@@ -107,10 +107,10 @@
 .canvas-list {
     .ant-list-items {
         display: grid;
-        grid-template-columns: repeat(auto-fill, 248px);
+        grid-template-columns: repeat(auto-fill, 275px);
         gap: 16px;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: space-between;
     }
 }
 
