feat: add loading views

--- a/examples/pixels/src/styles/antd.less
+++ b/examples/pixels/src/styles/antd.less
@@ -185,3 +185,10 @@
         }
     }
 }
+
+.spin-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+}
