feat: add skeleton view

--- a/examples/pixels/src/styles/antd.less
+++ b/examples/pixels/src/styles/antd.less
@@ -114,6 +114,14 @@
     }
 }
 
+.canvas-skeleton-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 275px);
+    gap: 0px 16px;
+    align-items: flex-start;
+    justify-content: center;
+}
+
 .canvas-item {
     display: flex;
     flex-direction: column;
