feat: add hover state to popover images

--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -871,3 +871,13 @@ html[data-theme="dark"]:not([data-customized="true"])
     font-size: 14px;
     line-height: 1.5;
 }
+
+#popover-bg-company:hover {
+    background-image: url("/landing/popovers/hover-company.png") !important;
+}
+#popover-bg-open-source:hover {
+    background-image: url("/landing/popovers/hover-open-source.png") !important;
+}
+#popover-bg-community:hover {
+    background-image: url("/landing/popovers/hover-community.png") !important;
+}
